Replaced JNode getJavaTypeForChildType() with ResolveDeclForChildType class